# Reflectra

./: .gitignore  README.md  pyproject.toml  setup.sh
configs/: reflectra.toml
results/: train_projection_history.json
scripts/: evaluate_clap.sh  evaluate_reflectra.sh  generate_clap_dataset.sh  generate_dataset.sh  plot_loss.py  setup.sh  train_proj.sh  train_reranker.sh
src/: config.py  main.py
src/benchmark/: create_benchmark.py  create_clap_benchmark.py
src/datasets/: __init__.py  create_metadata.py  paths.py
src/datasets/downloaders/: __init__.py  download_audioset.py  download_clap_benchmark.py  download_coco.py  download_coco_captions.py  download_emoset.py  download_flickr30k.py  download_mtg_jamendo.py  download_musiccaps.py  download_reflectra_benchmark.py  (+1 more)
src/evaluation/: cxc_sits.py  evaluate_clap.py  evaluate_clap_qdrant.py  evaluate_clip.py  evaluate_clip_cxc.py  evaluate_reflectra.py  evaluate_reranker.py
src/gui/: __init__.py  app.py
src/metrics/: retrieval_metrics.py
src/models/: clap_encoder.py  clip_encoder.py  projection_head.py  reflectra_model.py  reranker.py
src/opentelemetry/: __init__.py  plot_stage_timings.py  telemetry.py
src/training/: train_projection.py  train_reranker.py
src/utils/: audio.py  audio_clipping.py  batch_encoding.py  benchmark_tables.py  hashing.py  json.py  media_tables.py  openai_client.py  plot_loss.py
src/vector_db/: index_clap_audio_qdrant.py  qdrant_store.py  rerank_search.py
study/: README.md  __init__.py  audio_parts.py  benchmark_search_timings.py  download_audio_from_metadata.py  fill_clap_audio_qdrant.py  fill_db.sh  snapshot_vector_db.py
(+17 files in other folders)
