[project]
name = "reflectra"
version = "0.1.0"
description = "Image-to-music retrieval system using CLIP, CLAP, and Qdrant"
authors = [
    {name = "Aleksei Blinov"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "qdrant-client",
    "numpy",
    "librosa",
    "soundfile",
    "pillow",
    "tqdm",
    "datasets",
    "yt-dlp",
    "torchcodec",
    "openai",
    "opentelemetry-api==1.21.0",
    "opentelemetry-sdk==1.21.0",
    "opentelemetry-exporter-jaeger-thrift==1.21.0",
    "deprecated",
    "protobuf>=5.0,<8.0",
    "PySide6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "study"]

[project.scripts]
reflectra-search = "src.main:main"
reflectra-gui = "src.main:gui_main"
